--- a/bilder.html
+++ b/bilder.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Bilder</title>
+        <title>Olav Huse</title>
         <link rel="stylesheet" href="main.css">
         <link rel="shortcut icon" href="Bilder/PCB-icon.png">
     </head>
